# ocpp-client

./: .gitignore  CLI_REFERENCE.md  COMPLETION_REPORT.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  REST_API.md
data/: example_1.json  example_1.orig.json  example_2.json  example_2.orig.json  test_0_1.json
examples/: connect.rs
examples/connect/: main.rs
src/: cli.rs  client.rs  common_client.rs  communicator1_6.rs  communicator2_0_1.rs  communicator_trait.rs  connect.rs  cp.rs  cp_data.rs  lib.rs  logger.rs  message_stats.rs  ocpp_deque.rs  raw_ocpp_common_call.rs  reconnectws.rs  rest_server.rs
src/ocpp_1_6/: mod.rs  ocpp_1_6_client.rs  ocpp_1_6_error.rs  raw_ocpp_1_6_call.rs  raw_ocpp_1_6_result.rs
src/ocpp_2_0_1/: mod.rs  ocpp_2_0_1_client.rs  ocpp_2_0_1_error.rs  raw_ocpp_2_0_1_call.rs  raw_ocpp_2_0_1_result.rs
